--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 ---
-layout: special
+layout: newspecial
 featured: home
 ---
-
+<!--
 <div class="front">
 
 
@@ -63,4 +63,4 @@ featured: home
 
 </div>
 
-</div>
+</div>-->
