--- a/careers/index.html
+++ b/careers/index.html
@@ -16,5 +16,4 @@ title: Careers
     	{% endif %}
     {% endfor %}
 
-<p> Don't see the job you want? Send us a CV and a letter telling us why we desperately need you to <a href="{{site.baseurl}}mailto:jobs@simlab.org">jobs@simlab.org</a></p>
- 
+<p> Don't see the job you want? Send us a CV and a letter telling us why we desperately need you to <a href="mailto:jobs@simlab.org">jobs@simlab.org</a></p>
