--- a/team/index.html
+++ b/team/index.html
@@ -1,8 +1,8 @@
 ---
-layout: default
+layout: newdefault
 title: Team
 ---
-<div class="ui cards">
+<div class="ui three stackable cards">
  {% for page in site.pages%}
        <!--Team Member-->
        {% if page.categories contains "staff" %}
