--- a/projects/index.html
+++ b/projects/index.html
@@ -2,7 +2,7 @@
 layout: newdefault
 title: Projects
 ---
-<h1>Active</h1>
+<h1>Active Projects</h1>
 <div class="ui special two cards">
  {% for page in site.pages%}
        <!--Project-->
