pre-launch prep

--- a/team/index.html
+++ b/team/index.html
@@ -33,7 +33,7 @@ title: Team
 
 <h1>Board of Directors</h1>
 
-<div class="ui four cards board">
+<div class="ui three cards board">
  {% for page in site.pages%}
        {% if page.categories contains "board" %}
 <div class="card">
